[package]
name = "ambient_assistant"
version = "0.1.0"
edition = "2021"
default-run = "ambient_assistant"

[dependencies]
gtk4 = "0.8"
glib = "0.19"
gio = "0.19"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "backend"
path = "backend.rs"